--- a/mappings/Question.dcm.yml
+++ b/mappings/Question.dcm.yml
@@ -1,6 +1,6 @@
-Questions:
+Question:
     type: entity
-    table: questions
+    table: question
     id:
         id:
             type: integer
@@ -19,13 +19,13 @@ Questions:
                 fixed: false
         question:
             type: string
-            nullable: false
+            nullable: true
             length: 255
             options:
                 fixed: false
         questionOrigine:
             type: integer
-            nullable: false
+            nullable: true
             options:
                 unsigned: false
             column: question_origine
